# 2DStrat

./: .gitignore  CMakeLists.txt
src/: abilities.cpp  abilities.h  battle.cpp  battle.h  buttons.cpp  buttons.h  components.h  context.h  gui.cpp  gui.h  item.cpp  item.h  main.cpp  person.cpp  person.h  resource.cpp  resource.h  scenes.cpp  scenes.h  task.cpp  task.h  tile.cpp  tile.h  util.cpp  util.h  water.hpp  worldMap.cpp  worldMap.h
